use nfs-server instead of nfs-kernel-server

--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -9,7 +9,7 @@ pxeserver_packages:
 
 pxeserver_services:
   - rpcbind
-  - nfs-kernel-server
+  - nfs-server
 
 pxeserver_files:
   - /boot/efi/EFI/BOOT/BOOTX64.CSV
